[gd_scene load_steps=13 format=3 uid="uid://copk8kj3vfvb5"]

[ext_resource type="Script" uid="uid://bdfy5n4t1kc3d" path="res://Collectibles/shell_crate.gd" id="1_x271n"]
[ext_resource type="FontFile" uid="uid://bcs10ci4xmn4v" path="res://UI/fonts/Transformers Movie font.ttf" id="2_vaf14"]
[ext_resource type="AudioStream" uid="uid://cwr0rn0ejftlu" path="res://Collectibles/shell-pickup.mp3" id="3_3gf14"]
[ext_resource type="Shader" uid="uid://chk3054l3yldg" path="res://Collectibles/shell_crate_shader.gdshader" id="4_j7fit"]
[ext_resource type="ArrayMesh" uid="uid://dlc6rmo2xpb5y" path="res://shells/SM_Shell.obj" id="4_pt6er"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3b2r7"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_5ybvh"]
size = Vector3(2, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7fko7"]
render_priority = 0
shader = ExtResource("4_j7fit")
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/glow_color = Color(1, 1, 0, 1)
shader_parameter/glow_strength = 10.0
shader_parameter/fresnel_power = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j7fit"]
render_priority = 0
shader = ExtResource("4_j7fit")
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/glow_color = Color(1, 1, 0, 1)
shader_parameter/glow_strength = 10.0
shader_parameter/fresnel_power = 5.0

[sub_resource type="Animation" id="Animation_pt6er"]
resource_name = "rotate"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShellMeshes:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShellMeshes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.0802341, 0), Vector3(0, 1, 0), Vector3(0, 0.0802341, 0)]
}

[sub_resource type="Animation" id="Animation_j7fit"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShellMeshes:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShellMeshes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0802341, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7fko7"]
_data = {
&"RESET": SubResource("Animation_j7fit"),
&"rotate": SubResource("Animation_pt6er")
}

[node name="ShellCrate" type="Area3D" groups=["health_crate"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 7
script = ExtResource("1_x271n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3b2r7")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_5ybvh")

[node name="HelpText" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
billboard = 1
text = "E to collect shell crate"
font = ExtResource("2_vaf14")
font_size = 128

[node name="PickupAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_3gf14")
volume_db = 30.0
unit_size = 100.0

[node name="ShellMeshes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0802341, 0)

[node name="ShellMesh" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.712352, -0.46667, -0.237503)
material_override = SubResource("ShaderMaterial_7fko7")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh2" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.687065, -0.48864, 0.233564)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh3" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.261331, -0.48864, -0.241293)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh4" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.261331, -0.48864, 0.233564)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh5" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.263795, -0.48864, -0.241293)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh6" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.263795, -0.48864, 0.233564)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh7" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.689529, -0.48864, -0.241293)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh8" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.689529, -0.48864, 0.233564)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh9" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.714955, 0.303165, -0.228988)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh10" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.689668, 0.281195, 0.242079)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh11" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.263934, 0.281195, -0.232778)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh12" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.263934, 0.281195, 0.242079)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh13" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.261192, 0.281195, -0.232778)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh14" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.261192, 0.281195, 0.242079)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh15" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.686926, 0.281195, -0.232778)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="ShellMesh16" type="MeshInstance3D" parent="ShellMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.686926, 0.281195, 0.242079)
material_override = SubResource("ShaderMaterial_j7fit")
mesh = ExtResource("4_pt6er")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7fko7")
}
autoplay = "rotate"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
